# HttpArena

./: .gitignore  README.md
.github/workflows/: benchmark-pr.yml
frameworks/aspnet-minimal-ioxide/: AppData.cs  Dockerfile  Handlers.cs  Program.cs  README.md  aspnet-minimal-ioxide.csproj  build.sh  meta.json
frameworks/aspnet-minimal-ioxide/Pages/: Fortunes.cshtml.cs
frameworks/fasthttp/: Dockerfile  README.md  main.v  meta.json
frameworks/genhttp-11/: Project.cs  genhttp.csproj  meta.json
frameworks/genhttp-11-ioxide/: Dockerfile  Program.cs  README.md  genhttp.csproj  meta.json
frameworks/genhttp-11/Tests/: EchoHandler.cs
frameworks/ioxide/: Cache.cs  Crud.cs  Dockerfile  Handler.cs  HttpSession.cs  Precompressed.cs  Program.cs  README.md  ioxide-arena.csproj  meta.json  nuget.config
frameworks/ktor/: Dockerfile  build.gradle.kts
frameworks/ktor-ghost/: Dockerfile  build.gradle.kts  meta.json  settings.gradle.kts
frameworks/ktor-ghost/gradle/: libs.versions.toml
frameworks/ktor-ghost/src/main/kotlin/com/httparena/: Application.kt  DBSchema.kt  DataTypes.kt  Utils.kt
frameworks/ktor-ghost/src/test/kotlin/com/httparena/: ApplicationTest.kt
frameworks/ktor-ghost/src/test/resources/: baseline11.http  baseline11post.http
frameworks/ktor/src/main/kotlin/com/httparena/: Application.kt  Utils.kt
frameworks/mq-bridge/: Cargo.toml  Dockerfile  meta.json
frameworks/mq-bridge-h2c/: Cargo.toml  Dockerfile  meta.json
frameworks/mq-bridge-h2c/src/: main.rs
frameworks/mq-bridge-py/: Dockerfile  meta.json  server.py
frameworks/mq-bridge-websocket/: Cargo.toml  Dockerfile  meta.json
frameworks/mq-bridge-websocket/src/: main.rs
frameworks/mq-bridge/src/: main.rs
frameworks/phoenix-bandit/: .gitignore  Dockerfile  meta.json  mix.exs
frameworks/phoenix-bandit/config/: config.exs  dev.exs  prod.exs  runtime.exs
frameworks/phoenix-bandit/lib/: phoenix_bandit.ex  phoenix_bandit_web.ex
frameworks/phoenix-bandit/lib/phoenix_bandit/: application.ex  db.ex
frameworks/phoenix-bandit/lib/phoenix_bandit_web/: endpoint.ex  router.ex
frameworks/phoenix-bandit/lib/phoenix_bandit_web/channels/: echo_websocket.ex
frameworks/phoenix-bandit/lib/phoenix_bandit_web/controllers/: benchmark_controller.ex  crud_controller.ex  error_json.ex
frameworks/pico/: Dockerfile  README.md  meta.json
frameworks/rails/: Dockerfile  Gemfile
frameworks/rails/config/: application.rb  puma.rb
frameworks/roadrunner/: meta.json
frameworks/sark/: Cargo.toml  Dockerfile  README.md  meta.json
frameworks/sark-gateway/: compose.gateway-h3.yml  compose.gateway.yml  meta.json
frameworks/sark-gateway/proxy/: Caddyfile  Dockerfile
frameworks/sark-grpc/: Dockerfile  build.sh  meta.json
frameworks/sark-grpc-tls/: build.sh  meta.json
frameworks/sark-h2/: build.sh  meta.json
frameworks/sark-h2c/: build.sh  meta.json
frameworks/sark-h3/: build.sh  meta.json
frameworks/sark-json-tls/: build.sh  meta.json
frameworks/sark-production/: compose.production-stack.yml  meta.json
frameworks/sark-websocket/: build.sh  meta.json
frameworks/sark/httparena/: Cargo.toml
frameworks/sark/httparena-grpc/: Cargo.toml  build.rs
frameworks/sark/httparena-grpc/proto/: benchmark.proto
frameworks/sark/httparena-grpc/src/: main.rs
frameworks/sark/httparena/src/: boot.rs  cache.rs  dataset.rs  h2_tls_main.rs  h2bench.rs  h2c_main.rs  h3_main.rs  json.rs  json_tls_main.rs  lib.rs  main.rs  model.rs  ws_main.rs
frameworks/simplew/: simplew-arena.csproj
frameworks/sinatra/: Dockerfile  Gemfile  config.ru
frameworks/swerver/: Dockerfile  build.zig.zon  main.zig
frameworks/symfony-spawn-tas/: .gitignore
frameworks/true-async-server/: Dockerfile
frameworks/typev/: meta.json
frameworks/typev/bundle/: output.tvbc
frameworks/typev/bundle/benchmark-code/src/: assets.tc  http.tc  main.tc  ws.tc
frameworks/vanilla-epoll/: Dockerfile  README.md  main.v  meta.json
frameworks/vanilla-io_uring/: Dockerfile  README.md  main.v  meta.json
frameworks/veb/: Dockerfile  README.md  main.v  meta.json
frameworks/zeemo/: README.md  meta.json
frameworks/zeemo/src/: handlers.zig  http.zig  main.zig
frameworks/zix/: Dockerfile  meta.json
frameworks/zix-grpc/: Dockerfile  meta.json
frameworks/zix-grpc/src/: main.zig
frameworks/zix-ws/: Dockerfile  build.zig  build.zig.zon  meta.json
frameworks/zix-ws/src/: main.zig
frameworks/zix/src/: main.zig
scripts/: benchmark.sh  gen_new_leaderboard_data.py  validate-ws.py  validate.sh
scripts/lib/: profiles.sh
site/data/: api-16-1024.json  api-4-256.json  async-db-1024.json  baseline-4096.json  baseline-512.json  baseline-h2-1024.json  baseline-h2-256.json  baseline-h2c-1024.json  baseline-h2c-256.json  baseline-h2c-4096.json  baseline-h3-64.json  crud-4096.json  echo-ws-16384.json  echo-ws-4096.json  echo-ws-512.json  echo-ws-pipeline-16384.json  echo-ws-pipeline-4096.json  echo-ws-pipeline-512.json  fortunes-1024.json  frameworks.json  json-4096.json  json-comp-16384.json  json-comp-4096.json  json-comp-512.json  json-h2c-1024.json  json-h2c-4096.json  json-tls-4096.json  limited-conn-4096.json  limited-conn-512.json  pipelined-4096.json  pipelined-512.json  static-1024.json  static-4096.json  static-6800.json  static-h2-1024.json  static-h2-256.json  static-h3-64.json  stream-grpc-64.json  unary-grpc-1024.json  unary-grpc-256.json  (+2 more)
site/static/new-leaderboard/: index.html
