[workspace]
members = ["httparena", "httparena-grpc"]
resolver = "2"

[workspace.package]
edition = "2024"

[workspace.dependencies]
dope = "0.4"
dope-gen = "0.4"
dope-extra = "0.4"
dope-tls = "0.4"
dope-quic = "0.2"
o3 = "0.1"
sark = "0.3"
sark-core = "0.3"
sark-gen = "0.3"
sark-ws = "0.3"
sark-h2 = "0.3"
sark-h3 = "0.3"
sark-grpc = "0.3"
sark-grpc-build = "0.3"
cartel-pg = "0.2"
cartel-redis = "0.2"
cartel-gen = "0.2"
tent = "0.2"
shin = "0.3"
http = "1.4"
prost = "0.14.3"
pin-project = "1"
rcgen = { version = "0.14", default-features = false, features = ["aws_lc_rs", "pem"] }

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
